--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   cupertino_icons: ^1.0.3
   google_fonts: ^2.1.0
   flutter_spinkit: ^5.0.0
+  equatable: ^2.0.3
+  flutter_bloc: ^7.1.0
 
 dev_dependencies:
   flutter_test:
