--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   flutter_spinkit: ^5.0.0
   equatable: ^2.0.3
   flutter_bloc: ^7.1.0
+  colorful_safe_area: ^0.3.0
+  shared_preferences: ^2.0.6
 
 dev_dependencies:
   flutter_test:
