Feat: Design, login, doa logic

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   flutter_bloc: ^7.1.0
   colorful_safe_area: ^0.3.0
   shared_preferences: ^2.0.6
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
