--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,8 +16,9 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 
-#29 July 2021 -> v4
-version: 1.0.2+3
+#29 July 2021 -> 4
+#20 August 2021 ->5
+version: 1.0.2+5
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
